--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/aqa_cad_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/aqa_cad_notes.html
@@ -5,44 +5,132 @@
     </head>
 
 <body>
-    <div class="containter"> 
-        <div class="quote">
-            <h2>Safe Working Practices</h2>
-        </div>
-        <div class="content-wrapper">
-            <div class="portfolio-items-wrapper-notes_single">
+    <div class="containter">
+        <div class="notes-content-wrapper">
+            <div class="notes-content-header" style="background-image:url(/images/Digital_Tech/DigiTech_note_CAD.jpg)" title="metal background">
+                <h1 style="color:white"><u><b>Computer Aided Design (CAD)</b></u></h1>
+            </div>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/materials_and_their_applications_notes.html">Materials and their applications</a>
-                        </div>
-                    </div>
+            <div class="notes-content">
+
+                <div class="notes-content-subheader">
+                    <h2><hr>What is Computer Aided Design (CAD)?<hr></h2>
                 </div>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Classification of materials</a>
-                        </div>
-                    </div>
+                <h3><li>Computer aided design <b>(CAD)</b> is used to draw 2D and 3D designs on computer</li>
+                    <li>CAD sofware pacakges can be downloaded and used to create designs on a computer</li></h3>
+
+                <h3><u><b>CAD software:</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Designs can be created, saved and edited easily (saves time)</li>
+                                <li>Designs can be easily copied/repeated</li>
+                                <li>Designs can be easily sent to other offices/clients etc</li>
+                                <li>Designs can be worked on by remote teams simultaneously</li>
+                                <li>Designs can look photo-realistic to gain opinions from clients</li>
+                                <li>CAD is very accurate</li>
+                                <li>CAD software such as FEA/CFD can test design ideas under stress/aerodynamics</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>CAD sodtware is complex to learn</li>
+                                <li>Software can be very expensive</li>
+                                <li>Need a robust IT system/powerful computer</li>
+                                <li>Compatibility issues with software between users</li>
+                                <li>Security issues - risk of data being corrupted/hacked</li>                            
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Design of buildings, bridges, structures</h3>
+                <div class="notes-content-subheader">
+                    <h2><hr><hr></h2>
                 </div>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Methods for investigating and testing materials</a>
-                        </div>
-                    </div>
+                <h3 id="2Dmodelling"><u><b>2D CAD modelling:</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Reduces development time/costs</li>
+                                <li>Can be easily edited</li>
+                                <li>Digital files are easy to store</li>
+                                <li>Layer management (turn on and off)</li>
+                                <li>Can be integrated with 3D software</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>No physical feel of product</li>
+                                <li>Need a robust IT system/powerful computer</li>   
+                                <li>Steep learning curve</li>                  
+                                <li>Software is expensive</li>
+                                <li>Dependency on power / electricity</li>     
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Structural designs, floor plans</h3>
+
+                <div class="notes-content-subheader">
+                    <h2><hr><hr></h2>
                 </div>
 
+                <h3 id="3Dmodelling"><u><b>3D CAD modelling:</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Reduces development time/costs</li>
+                                <li>Can be easily edited</li>
+                                <li>Realistic visualisation</li>
+                                <li>Digital files are easy to store</li>
+                                <li>No material wastage</li>
+                                <li>Can run simulations (FEA and CFD)</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>No physical feel of product</li>
+                                <li>Need a robust IT system/powerful computer</li>   
+                                <li>Steep learning curve</li>                  
+                                <li>Software is expensive</li>
+                                <li>Dependency on power / electricity</li>                         
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Virtual modelling of prototype products</h3>
+
+                <div class="notes-content-subheader">
+                    <h2><hr><hr></h2>
+                </div>
+
+                <h3><b>Topic test:</b></h3>
+
+                <div class="blurbox" style="background-color: #bdbdbd;">
+                    <a href="\documents\Q&A\digital_tech_exercises\Computer_aided_design_Q&A.pdf">Computer Aided Design (CAD) Questions</a>
+                </div> 
             </div>
         </div>
 
         <script src="/footer.js"></script>
+
     </div>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
